--- a/Artful-Adventures/ArtfulAdventures.Web/Views/Shared/_Layout.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/Shared/_Layout.cshtml
@@ -41,20 +41,20 @@
                                 </a>
                             </li>
                             <li class="nav-item" style="font-size: 1.3rem">
-                                <a class="nav-link active" asp-area="" asp-controller="Picture" asp-action="Upload">
+                                <a class="nav-link active" asp-area="" asp-controller="Picture" asp-action="Upload" asp-route-page="1">
                                     Upload
                                     <span class="visually-hidden">(current)</span>
                                 </a>
                             </li>
 
                             <li class="nav-item" style="font-size: 1.3rem">
-                                <a class="nav-link active" asp-area="" asp-controller="Blog" asp-action="GetBlogs">
+                                <a class="nav-link active" asp-area="" asp-controller="Blog" asp-action="GetBlogs" asp-route-page="1">
                                     Blogs
                                     <span class="visually-hidden">(current)</span>
                                 </a>
                             </li>
                             <li class="nav-item" style="font-size: 1.3rem">
-                                <a class="nav-link active" asp-area="" asp-controller="" asp-action="">
+                                <a class="nav-link active" asp-area="" asp-controller="Challenge" asp-action="GetAll" asp-route-page="1">
                                     Challenges
                                     <span class="visually-hidden">(current)</span>
                                 </a>
