--- a/Artful-Adventures/ArtfulAdventures.Web/Views/UserProfile/Favorites.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/UserProfile/Favorites.cshtml
@@ -1,7 +1,7 @@
 ﻿@model PortfolioViewModel
 
 @{
-    ViewBag.Title = "Portfolio";
+    ViewBag.Title = "Favorites";
 }
 @if (TempData["Message"] != null)
 {
