--- a/Artful-Adventures/ArtfulAdventures.Web/Views/Following/All.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/Following/All.cshtml
@@ -2,127 +2,159 @@
 @using Microsoft.AspNetCore.Http
 <link rel="stylesheet" href="https://cdn.rawgit.com/bantikyan/icheck-bootstrap/master/icheck-bootstrap.min.css">
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<div id="content">
-    @{
-        int currentPage = ViewBag.CurrentPage ?? 1;
-        int previousPage = currentPage > 1 ? currentPage - 1 : 1;
-        int nextPage = currentPage + 1;
-    }
-    @if (currentPage > 1)
-    {
-        <a href="#" class="page-link" data-page="@previousPage">Previous</a>
-    }
-    <a href="#" class="page-link" data-page="@nextPage">Next</a>
-    @{
-        ViewBag.Title = "Following";
+@{
+    int currentPage = ViewBag.CurrentPage ?? 1;
+    int previousPage = currentPage > 1 ? currentPage - 1 : 1;
+    int nextPage = currentPage + 1;
+}
 
+@if (TempData["Error"] != null)
+{
+    <div class="alert alert-danger bg-dark text-white" role="alert">
+        @TempData["Error"]
+    </div>
+}
 
-        <div class="container">
-            <div class="top-section" style="border: 1px solid black;">
-                <div class="text-left">
-                    <style>
-                        .form-check {
-                            display: inline-block;
-                            width: 30%;
-                        }
-                    </style>
-                    @foreach (var item in @Model.HashTags)
+@{
+    ViewBag.Title = "Following";
+    <h1 class="text-center">Following</h1>
+
+    <hr style="margin-top: 50px; margin-bottom:50px;" />
+
+    <div class="mb-3">
+        <a class="btn btn-outline-dark my-2 mx-auto" href="@Url.Action("All", "Following", new { sort = "", page = 1})" role="button" style="color:wheat; background-color:cornflowerblue;">All Pictures</a>
+        <a class="btn btn-outline-dark my-2 mx-auto" href="@Url.Action("All", "Following", new { sort = "likes", page = 1})" role="button" style="color:wheat;  background-color:#284564">Popular</a>
+        <a class="btn btn-outline-dark my-2 mx-auto" href="@Url.Action("All", "Following", new { sort = "newest", page = 1})" role="button" style="color:wheat;  background-color:#284564">Recent</a>
+        <a class="btn btn-outline-dark my-2 mx-auto" href="@Url.Action("All", "Following", new { sort = "oldest", page = 1})" role="button" style="color:wheat;  background-color:#284564">Previous</a>
+        <a id="sort-link-tag" class="btn btn-outline-dark my-2 mx-auto" href="@Url.Action("All", "Following", new { sort = " ", page = 1})" role="button" style="color:wheat;  background-color:#284564">Sort by tag</a>
+        <input id="tag-input" type="text" placeholder="Enter tag" list="suggestions" />
+        <datalist id="suggestions"></datalist>
+
+        <a id="sort-link-user" class="btn btn-outline-dark my-2 mx-auto" href="@Url.Action("All", "Following", new { sort = " ", page = 1})" role="button" style="color:wheat;  background-color:#284564">By Author</a>
+        <input id="user-input" type="text" placeholder="Enter user" />
+        <datalist id="suggestions"></datalist>
+    </div>
+    <div class="mb-2 py-3">
+        @foreach (var tag in Model.HashTags)
+        {
+            <a class="btn btn-outline-dark my-2 mx-auto" href="@Url.Action("All", "Following", new { sort = @tag.Name, page = 1})" role="button" style="color:wheat; margin-bottom: 2rem!important;">@tag.Name<span class="badge ms-2">@tag.PicturesCount</span></a>
+        }
+
+        <style>
+            #tag-input, #user-input {
+                margin: -2px 0.5rem !important;
+                border: none;
+                border-bottom: 1px solid #ccc;
+                background-color: #272e48;
+                color: wheat;
+                font-size: 1.0rem;
+                padding: 0.5rem;
+                margin-left: 1rem;
+            }
+
+                #tag-input:focus, #user-input:focus {
+                    outline: none;
+                }
+        </style>
+        <script>
+            document.getElementById('tag-input').addEventListener('input', function () {
+                var sort = this.value;
+                var link = document.getElementById('sort-link-tag');
+                var href = link.getAttribute('href');
+                href = href.replace(/sort=.*?(&|$)/, 'sort=' + encodeURIComponent(sort) + '$1');
+                link.setAttribute('href', href);
+            });
+        </script>
+        <script>
+            document.getElementById('user-input').addEventListener('input', function () {
+                var sort = this.value;
+                var link = document.getElementById('sort-link-user');
+                var href = link.getAttribute('href');
+                href = href.replace(/sort=.*?(&|$)/, 'sort=' + encodeURIComponent(sort) + '$1');
+                link.setAttribute('href', href);
+            });
+        </script>
+        <script>
+            var hashTags = @Html.Raw(Json.Serialize(Model.TagsForDropDown));
+
+            document.getElementById('tag-input').addEventListener('input', function () {
+                var input = this.value;
+                var suggestions = hashTags.filter(function (hashTag) {
+                    return hashTag.name && hashTag.name.toLowerCase().startsWith(input.toLowerCase());
+                });
+                var suggestionsList = document.getElementById('suggestions');
+                suggestionsList.innerHTML = '';
+                suggestions.forEach(function (suggestion) {
+                    var option = document.createElement('option');
+                    option.value = suggestion.name;
+                    suggestionsList.appendChild(option);
+                });
+            });
+        </script>
+    </div>
+    <div class="container">
+        <div class="col-lg-12">
+            <div class="card mb-4">
+                <div class="card-body">
+                    @if (Model.Pictures != null && Model.Pictures.Count > 0)
                     {
-                        <tr id="row-@item.Id">
-                            <td><input type="checkbox" name="SelectedTags" value="@item.Id" /></td>
-                            <td>@item.Name</td>
-                        </tr>
+                        <div style="display: flex; flex-wrap: wrap;">
+                            @foreach (var picture in Model.Pictures)
+                            {
+                                @await Html.PartialAsync("_PictureGalleryPartial", picture)
+                            }
+                        </div>
                     }
-                    <button id="filterButton" type="submit">Submit</button>
-
-                </div>
-            </div>
-            <div class="col-lg-12">
-                <div class="card mb-4">
-                    <div class="card-body">
-                        @if (Model.PicturesIds != null && Model.PicturesIds.Count > 0)
-                        {
-                            <div style="display: flex; flex-wrap: wrap;">
-                                @foreach (var picture in Model.PicturesIds)
-                                {
-                                    @await Html.PartialAsync("_PictureGalleryPartial", picture)
-                                }
-                            </div>
-                        }
-                    </div>
                 </div>
             </div>
         </div>
-    }
-</div>
-@section Scripts {
-    <script>
-        $(document).ready(function () {
-            $('#filterButton').click(function (event) {
-                event.preventDefault();
-                // Store the state of the checkboxes
-                var checkboxState = $('input[name="SelectedTags"]').map(function () {
-                    return this.checked;
-                }).get();
-                var selectedTags = $('input[name="SelectedTags"]:checked').map(function () {
-                    return this.value;
-                }).get();
-                $.ajax({
-                    url: '@Url.Action("All", "Following")',
-                    type: 'GET',
-                    data: $.param({ tagsIds: selectedTags }, true),
-                    traditional: true,
-                    success: function (result) {
-                        // Update the page content with the new view
-                        $('#content').html(result);
-                        // Restore the state of the checkboxes
-                        $('input[name="SelectedTags"]').each(function (index) {
-                            this.checked = checkboxState[index];
-                        });
-                        // Update the URL to reflect the current page number
-                        var newUrl = '@Url.Action("All", "Following")' + '?page=' + page;
-                        history.pushState(null, null, newUrl);
-                    },
-                    error: function (xhr, status, error) {
-                        // handle error
-                    }
-                });
-            });
+    </div>
+    <style>
+        .page-item {
+            border: none;
+            border-bottom: 1px solid #ccc;
+            background-color: #272e48;
+            color: wheat;
+            font-size: 1rem;
+            padding: 0.3rem;
+            margin-left: 0.3rem;
+        }
 
-            $('.page-link').click(function (event) {
-                event.preventDefault();
-                var page = $(this).data('page');
-                // Store the state of the checkboxes
-                var checkboxState = $('input[name="SelectedTags"]').map(function () {
-                    return this.checked;
-                }).get();
-                var selectedTags = $('input[name="SelectedTags"]:checked').map(function () {
-                    return this.value;
-                }).get();
-                $.ajax({
-                    url: '@Url.Action("All", "Following")',
-                    type: 'GET',
-                    data: $.param({ page: page, tagsIds: selectedTags }, true),
-                    traditional: true,
-                    success: function (result) {
-                        // Update the page content with the new view
-                        $('#content').html(result);
-                        // Restore the state of the checkboxes
-                        $('input[name="SelectedTags"]').each(function (index) {
-                            this.checked = checkboxState[index];
-                        });
-                        // Update the URL to reflect the current page number
-                        var newUrl = '@Url.Action("All", "Following")' + '?page=' + page;
-                        history.pushState(null, null, newUrl);
-                    },
-                    error: function (xhr, status, error) {
-                        // handle error
-                    }
-                });
-            });
-        });
+            .page-item.disabled a.page-link {
+                color: wheat;
+                background-color: #272e48;
+                opacity: 0.5;
+            }
 
-    </script>
+
+            .page-item a {
+                color: wheat;
+                background-color: #272e48;
+            }
+
+                .page-item a:focus {
+                    outline: none;
+                }
+
+    </style>
+    <nav aria-label="Page navigation example" style="margin-right: 0.5rem;">
+        <ul class="pagination justify-content-end">
+            @if (currentPage > 1)
+            {
+                <li class="page-item"><a class="page-link" href="@Url.Action("All", "Following", new { sort = ViewBag.Sort, page = previousPage})">Previous</a></li>
+            }
+            else
+            {
+                <li class="page-item disabled">
+                    <a class="page-link" href="#" tabindex="-1">Previous</a>
+                </li>
+            }
+            <li class="page-item"><a class="page-link" href="@Url.Action("All", "Following", new { sort = ViewBag.Sort, page = currentPage })">@currentPage</a></li>
+            <li class="page-item"><a class="page-link" href="@Url.Action("All", "Following", new { sort = ViewBag.Sort, page = currentPage + 1 })">@(currentPage + 1)</a></li>
+            <li class="page-item"><a class="page-link" href="@Url.Action("All", "Following", new { sort = ViewBag.Sort, page = currentPage + 2})">@(currentPage + 2)</a></li>
+            <li class="page-item">
+                <a class="page-link" href="@Url.Action("All", "Following", new { sort = ViewBag.Sort, page = nextPage})">Next</a>
+            </li>
+        </ul>
+    </nav>
 }
-
-
