--- a/Artful-Adventures/ArtfulAdventures.Web/Views/Picture/Upload.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/Picture/Upload.cshtml
@@ -2,7 +2,6 @@
 @using Microsoft.AspNetCore.Http
 @using Microsoft.AspNetCore.Mvc.ModelBinding;
 
-
 @{
     ViewBag.Title = "Add Picture";
 }
@@ -19,7 +18,6 @@
 
 @if (errors.Count > 0)
 {
-
     @foreach (var error in errors)
     {
         foreach (var errorMessage in error.Value.Errors)
@@ -29,41 +27,63 @@
             </div>
         }
     }
-
 }
-<div class="row">
-    <div class="col-sm-12 offset-lg-2 col-lg-8 offset-xl-3 col-xl-6">
-        <div class="mb-3 text-center">
-            @using (Html.BeginForm("Upload", "Picture", FormMethod.Post, new { enctype = "multipart/form-data", style = "display: inline-block; flex-direction: column; align-items: center;" }))
-            {
-                <div class="row">
-                    <div class="col-md-8">
-                        <div class="mb-3 pt-3 pb-3">
-                            <label asp-for="@Model.Description" class="form-label-add-edit" style="font-size: 20px;">Description</label>
-                            <textarea asp-for="@Model.Description" class="form-control" aria-required="true" rows="15"></textarea>
-                        </div>
+
+<form method="post" asp-controller="Picture" asp-action="Upload" enctype="multipart/form-data"
+      style="display: inline-block; flex-direction: column; align-items: center;">
+    <div class="row">
+        <div class="col-md-5">
+            <h2>Upload Picture</h2>
+            <hr />
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            <div class="form-group">
+                <div class="col-md-10">
+                    <div class="d-flex justify-content-between mt-3">
+                        <label asp-for="@Model.Description" class="form-label-add-edit" style="font-size: 20px;">Description</label>
+                        <span id="charCount">0/1000</span>
                     </div>
-                    <div class="col-md-4">
-                        <div class="mb-3 pt-3 pb-3">
-                            <input class="form-control mb-2" type="file" name="file" id="file" style="width: 180%" />
-                            <input type="submit" class="form-control" value="Save" />
-                        </div>
-                    </div>
+
+                    <textarea asp-for="@Model.Description" class="form-control" aria-required="true" rows="8"></textarea>
+                    <span asp-validation-for="@Model.Description" class="text-danger"></span>
+                    <small class="form-text text-muted">The description must be between @DescriptionMinLength and @DescriptionMaxLength characters long.</small>
                 </div>
-                <div>
-                    @for (int i = 0; i < Model.HashTags.Count(); i++)
-                    {
-                        @Html.HiddenFor(m => m.HashTags[i].Id)
-                        @Html.HiddenFor(m => m.HashTags[i].Name)
-                        <div class="form-check">
-                            @Html.CheckBoxFor(m => m.HashTags[i].IsSelected, new { @class = "form-check-input", id = $"HashTags_{i}__IsSelected" })
-                            <label class="form-check-label" for="@($"HashTags_{i}__IsSelected")">@Model.HashTags[i].Name</label>
-                        </div>
-                    }
+            </div>
+            <div class="col-md-4">
+                <div class="mb-3 pt-3 pb-3">
+                    <input class="form-control mb-2" type="file" name="file" id="file" style="width: 180%;" />
+                    <input type="submit" class="form-control" style="margin-top: 15px;" value="Publish" />
                 </div>
-            }
+            </div>
+        </div>
+        
+
+        <div class="col-md-7">
+            @await Html.PartialAsync("_HashTagsPartial", Model.HashTags)
         </div>
     </div>
-</div>
+</form>
 <span asp-validation-for="@Model.HashTags" class="text-danger"></span>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+    $(document).ready(function () {
+        $('.btn-custom').click(function (event) {
+            event.preventDefault();
+            var $checkbox = $(this).parent().prev();
+            var isChecked = !$checkbox.prop('checked');
+            $checkbox.prop('checked', isChecked);
+            $(this).toggleClass('checked', isChecked);
+        });
+    });
+
+</script>
+
+<script>
+    document.querySelector('textarea').addEventListener('input', function () {
+        var charCount = this.value.length;
+        document.querySelector('#charCount').textContent = charCount + '/1000';
+    });
+
+</script>
+
+
 
