--- a/Artful-Adventures/ArtfulAdventures.Web/Views/_ViewImports.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/_ViewImports.cshtml
@@ -4,5 +4,8 @@
 @using ArtfulAdventures.Web.ViewModels.Picture
 @using ArtfulAdventures.Web.ViewModels.UserProfile
 @using ArtfulAdventures.Web.ViewModels.Blog
+@using ArtfulAdventures.Web.ViewModels.HashTag;
+@using ArtfulAdventures.Web.ViewModels.Challenges;
 @using static ArtfulAdventures.Common.DataModelsValidationConstants.BlogConstants;
+@using static ArtfulAdventures.Common.DataModelsValidationConstants.PictureConstants;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
