--- a/Artful-Adventures/ArtfulAdventures.Web/Views/Challenge/GetAll.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/Challenge/GetAll.cshtml
@@ -58,7 +58,7 @@
                         <h5 class="text-purple"  style="text-decoration:underline;">@item.Title</h5>
                         <h6 class="card-text" style="color:#2f9ce7">Challenge #@item.Id</h6>
                         <p class="card-text text-purple"><i class="fas fa-trophy">  Participants:</i> (@item.Participants)<p />
-                        <a class="btn btn-outline-dark my-2" href="@Url.Action("ChallengeDetails", "Challenge", new { id = item.Id} )" role="button" style="color:wheat">Participate</a>
+                        <a class="btn btn-outline-dark my-2 blog-button-white" href="@Url.Action("ChallengeDetails", "Challenge", new { id = item.Id} )" role="button" style="color:wheat">Participate</a>
                     </div>
                 </div>
             </div>
