--- a/Artful-Adventures/ArtfulAdventures.Web/Views/UserProfile/Favorites.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/UserProfile/Favorites.cshtml
@@ -13,7 +13,7 @@
 <div class="d-flex justify-content-center align-items-center">
     <div class="card mb-4" style="background: radial-gradient(circle at 10% 20%, rgba(218, 203, 246,0.3) 10%, rgba(192, 192, 245,0.1) 33.1%, rgba(218, 203, 246,0.5) 90%);border-color:rgb(218, 203, 246); width:50%;">
         <div class="card-body text-center">
-            <h5 class="mb-1" style="color:rgb(218, 203, 246);">Portfolio</h5>
+            <h5 class="mb-1" style="color:rgb(218, 203, 246);">Favorites</h5>
         </div>
     </div>
 </div>
